2005-07-14  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c: (cleanup_xcb), (cleanup_xlib),
	(cairo_test_for_target), (cairo_test_real): Patch a few memory
	leaks.

2005-07-13  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-meta-surface.c: (_cairo_meta_surface_replay): Use
	the _cairo_surface_*() functions when replaying.
	
	* src/cairo-ps-surface.c: Fold the "locate fallbacks" pass into
	the postscript output pass, and add a simple, first implementation
	of image fallbacks.

2005-07-13  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-font.c: (_cairo_simple_font_face_create_font): Rename
	CAIRO_FONT_BACKEND_DEFAULT to the more accurate
	CAIRO_SCALED_FONT_BACKEND_DEFAULT.

2005-07-13  Carl Worth  <cworth@cworth.org>

	* src/cairo-ft-private.h:
	* src/cairo-ft-font.c: (_cairo_unscaled_font_is_ft),
	(_cairo_scaled_font_is_ft): New predicates to allow checking for
	cairo_ft derivates of generic font type.

	* src/cairo-ps-surface.c: (_cairo_ps_surface_get_font),
	(_cairo_ps_surface_show_glyphs), (_ps_output_show_glyphs):
	* src/cairo-pdf-surface.c: (_cairo_pdf_document_get_font),
	(_cairo_pdf_surface_show_glyphs):
	* src/cairo-font-subset.c: (_cairo_font_subset_create):
	Add explicit checks for cairo_ft derivatives of generic fonts
	rather than just blindly assuming that's what we get.

2005-07-12  Carl Worth  <cworth@cworth.org>

	* src/cairo-hash-private.h:
	* src/cairo-hash.c:
	(_cairo_hash_table_create): Remove destroy notifier. This
	simplifies the implementation a bit, and no anticipated use of
	cairo_hash_table_t in cairo needs the destroy notifier. Most uses
	will be hash-backed object create/destroy functions.
	
	(_cairo_hash_table_destroy): Document that it is now a fatal
	error to call _cairo_hash_table_destroy on a non-empty hash table.

	(_cairo_hash_table_insert): Document that it is now a fatal
	error to insert an entry with a key that matches an existing
	entry.

	(_cairo_hash_table_random_entry): Add predicate function so that